# kafka-test-client

./: .gitignore  README.md  build.sh  build_number.txt  docker-compose.yaml  kind-load.sh
.github/workflows/: docker-publish.yaml
golang/: Dockerfile.consumer  Dockerfile.producer  StatisticsClient.go  config.go  consumer.go  data_loader.go  go.mod  go.sum  main.go  producer.go  startup.sh
helm-charts/: .gitignore  README.md
helm-charts/kafka-test-client/: Chart.yaml  values.yaml
helm-charts/kafka-test-client/templates/: 001-service-account.yaml  002-deployment.yaml  NOTES.txt  _helpers.tpl
helm-charts/kafka-test-client/templates/tests/: test-connection.yaml
helm-charts/statistics-collector/: Chart.yaml  values.yaml
helm-charts/statistics-collector/templates/: 001-ServiceAccount.yaml  002-Deployment.yaml  003-Service.yaml  NOTES.txt  _helpers.tpl
helm-charts/statistics-collector/templates/tests/: test-connection.yaml
java/: .gitignore  Dockerfile.consumer  Dockerfile.producer  pom.xml
java/src/main/java/com/github/mihkels/kafka/: App.java  AppComponent.java  AppConfig.java  AppModule.java  CSVReader.java  DataLoaderConfig.java  MotivationDataLoader.java  (+2 more)
python/: Dockerfile.consumer  Dockerfile.producer  kafka_consumer.py  kafka_producer.py  requirements.txt  statistics_client.py
rust/: Cargo.toml  Dockerfile.consumer  Dockerfile.producer
rust/src/: consumer.rs  load_env.rs  main.rs  producer.rs
services/: statistics.http
services/statistics-collector/: Dockerfile  go.mod  main.go  startup.sh
shared/data/: motivation.csv
(+1 files in other folders)
