[package]
name = "kafka-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = "0.36.2"
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
csv = "1.3.0"
rand = "0.8.5"
serde_json = "1.0.113"